--- a/index.html
+++ b/index.html
@@ -1,52 +1,228 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Real Estate Project</title>
-    <link rel="stylesheet" href="./main.css" />
-  </head>
-  <body>
-    <!--nav bar start-->
-    <nav
-      class="bg-[#2B2B2B] text-white h-10 p-5 flex justify-between items-center"
-    >
-      <div class="text-[20px] font-bold">LOGO</div>
-      <div>
-        <img src="public/icon_bar.png" alt="" />
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Real Estate Project</title>
+  <link rel="stylesheet" href="./main.css" />
+</head>
+
+<body>
+  <!--nav bar start-->
+  <nav class="bg-[#2B2B2B] text-white h-10 p-5 flex justify-between items-center">
+    <div class="text-[20px] font-bold">LOGO</div>
+    <div>
+      <img src="public/icon_bar.png" alt="" />
+    </div>
+  </nav>
+  <!--nav bar end-->
+
+  <main>
+    <!--hero section start-->
+    <section class=" black-grad text-white">
+      <!--hero content start-->
+      <div class="flex flex-col pt-20 px-5 gap-2">
+        <h1 class="text-xl font-medium">
+          We Provide<br />
+          Architectural design<br />
+          and Construction
+        </h1>
+        <p class="text-[#C4C4C4] text-base">
+          ​More than 100 building and housing projects that we have built. The
+          building owner chose us over other contractors in Jakarta, because
+          our work is different
+        </p>
+        <button class="self-start text-base font-semibold bg-blue-500 py-1.5 px-3 mt-2">Discover More</button>
       </div>
-    </nav>
-    <!--nav bar end-->
+      <!--hero content end-->
 
-    <main>
-      <!--hero section start-->
-      <section class="bg-[#080808] text-white">
-        <!--hero content start-->
-        <div class="flex flex-col pt-20 px-5 gap-2">
-          <h1 class="text-xl font-medium">
-            We Provide<br />
-            Architectural design<br />
-            and Construction
-          </h1>
-          <p class="text-[#C4C4C4] text-base">
-            ​More than 100 building and housing projects that we have built. The
-            building owner chose us over other contractors in Jakarta, because
-            our work is different
+      <!--hero image start-->
+      <div class="flex justify-end -mt-32">
+        <img src="public/hero_building.png" alt="">
+      </div>
+      <!--hero image end-->
+    </section>
+    <!--hero section end-->
+
+    <!--stat section start-->
+    <section class="blue-grad-2 p-5 text-white gap-4 flex flex-col">
+      <div class="flex justify-between">
+        <div>
+          <div class="flex items-baseline">
+            <h2 class="text-3xl font-bold">25</h2>
+            <h2 class="text-lg font-medium ml-1">years</h2>
+          </div>
+          <h3 class="text-xl font-semibold -mt-3">Operated</h3>
+        </div>
+        <div class="text-xl font-bold">Logo</div>
+      </div>
+
+      <p class="text-sm">
+        As a trusted general project that has been operating for 25 years, our commitment is always to prioritize our
+        client satisfaction.
+      </p>
+
+      <div class="flex justify-between">
+        <div>
+          <h3 class="text-xl font-bold ">300+</h3>
+          <p>
+            Happy <br> Client
           </p>
-          <button class="self-start text-base font-semibold bg-blue-500 py-1.5 px-3 mt-2">Discover More</button>
         </div>
-        <!--hero content end-->
-
-        <!--hero image start-->
-        <div class="flex justify-end -mt-32">
-          <img src="public/hero_building.png" alt="">
+        <div>
+          <h3 class="text-xl font-bold ">900+</h3>
+          <p>
+            Amazing <br> Projects
+          </p>
         </div>
-        <!--hero image end-->
-      </section>
-      <!--hero section end-->
-    </main>
+        <div>
+          <h3 class="text-xl font-bold ">20+</h3>
+          <p>
+            Awards <br> Winning
+          </p>
+        </div>
+      </div>
+    </section>
+    <!--stat section end-->
 
-    <script type="module" src="/main.js"></script>
-  </body>
+
+    <!--Brand Logo start-->
+    <section class="h-[100px] flex gap-4 items-center overflow-x-auto p-5">
+      <div class="h-20 grid place-content-center min-w-[7.5rem] center ">
+        <img src="public/brand/logo_1.png" alt="">
+      </div>
+      <div class="h-20 grid place-content-center min-w-[7.5rem] center ">
+        <img src="public/brand/logo_2.png" alt="">
+      </div>
+      <div class="h-20 grid place-content-center min-w-[7.5rem] center ">
+        <img src="public/brand/logo_3.png" alt="">
+      </div>
+      <div class="h-20  grid place-content-center min-w-[7.5rem] center ">
+        <img src="public/brand/logo_4.png" alt="">
+      </div>
+      <div class="h-20  grid place-content-center min-w-[7.5rem] center ">
+        <img src="public/brand/logo_5.png" alt="">
+      </div>
+    </section>
+
+    <!--Brand Logo end-->
+
+    <!--services start-->
+    <section class="p-5">
+      <div class="flex flex-col gap-2 text-center">
+        <h2 class="text-xl font-bold text-black">Our Excellent Services</h2>
+        <p class="text-base text-black">Check out our best service you can possibly orders in building your company and
+          don't forget to ask via our email or our customer service if you are interested in using our services</p>
+      </div>
+
+      <div class="flex gap-4 overflow-x-auto">
+        <div class="flex flex-col gap-2 min-w-[16.25rem]">
+          <div>
+            <img src="public/services/services_1.png" alt="" class="shadow-md">
+          </div>
+          <h3 class="text-lg font-semibold">Industrial</h3>
+          <p class="text-base">Industrial development is our main
+            line of business. We do Factory
+            Construction, Warehouse and others</p>
+        </div>
+        <div class="flex flex-col gap-2 min-w-[16.25rem]">
+          <div>
+            <img src="public/services/services_2.png" alt="" class="shadow-md">
+          </div>
+          <h3 class="text-lg font-semibold">Industrial</h3>
+          <p class="text-base">Industrial development is our main
+            line of business. We do Factory
+            Construction, Warehouse and others</p>
+        </div>
+        <div class="flex flex-col gap-2 min-w-[16.25rem]">
+          <div>
+            <img src="public/services/services_3.png" alt="" class="shadow-md">
+          </div>
+          <h3 class="text-lg font-semibold">Industrial</h3>
+          <p class="text-base">Industrial development is our main
+            line of business. We do Factory
+            Construction, Warehouse and others</p>
+        </div>
+      </div>
+    </section>
+    <!--services end-->
+
+
+    <!--what makesd us start-->
+    <section class="p-5">
+      <div class="flex flex-col gap-2">
+        <div class="h-1 w-[90px] blue-grad"></div>
+        <h2 class="text-xl font-bold text-black">What Make Us <br>
+          Different?</h2>
+        <p class="text-base text-black">Check out our best service you can possibly orders in building your company and
+          don't forget to ask via our email or our customer service if you are interested in using our services</p>
+      </div>
+
+      <div class="flex flex-col items-center text-center mt-10 gap-10">
+        <div class=" items-center flex flex-col gap-2 min-w-[16.25rem] max-w-[14.625rem]">
+          <div class="text-center">
+            <img src="public/makesus/make_us_1.png" alt="" class="">
+          </div>
+          <h3 class="text-lg mt-2 font-semibold">Industrial</h3>
+          <p class="text-base">Industrial development is our main
+            line of business. We do Factory
+            Construction, Warehouse and others</p>
+        </div>
+
+        <div class=" items-center flex flex-col gap-2 min-w-[16.25rem] max-w-[14.625rem]">
+          <div class="text-center">
+            <img src="public/makesus/makes_us_2.png" alt="" class="">
+          </div>
+          <h3 class="text-lg mt-2 font-semibold">Industrial</h3>
+          <p class="text-base">Industrial development is our main
+            line of business. We do Factory
+            Construction, Warehouse and others</p>
+        </div>
+
+        <div class=" items-center flex flex-col gap-2 min-w-[16.25rem] max-w-[14.625rem]">
+          <div class="text-center">
+            <img src="public/makesus/makes_us_3.png" alt="" class="">
+          </div>
+          <h3 class="text-lg mt-2 font-semibold">Industrial</h3>
+          <p class="text-base">Industrial development is our main
+            line of business. We do Factory
+            Construction, Warehouse and others</p>
+        </div>
+
+        <div class=" items-center flex flex-col gap-2 min-w-[16.25rem] max-w-[14.625rem]">
+          <div class="text-center">
+            <img src="public/makesus/makes_us_4.png" alt="" class="">
+          </div>
+          <h3 class="text-lg mt-2 font-semibold">Industrial</h3>
+          <p class="text-base">Industrial development is our main
+            line of business. We do Factory
+            Construction, Warehouse and others</p>
+        </div>
+      </div>
+    </section>
+    <!--what makesd us end-->
+
+
+    <!--our teams start-->
+    <section class="p-5">
+      <div class="bg-team-bg-image h-[340px] bg-no-repeat bg-cover flex justify-center items-end mb-40">
+        <div class="black-grad h-[250px] w-[250px] text-white relative top-24 flex flex-col gap-2 p-5 items-center">
+          <div>
+            <img src="public/teams/team_avatar.png" alt="">
+          </div>
+
+          <h3 class="text-lg font-semibold">Dianne Russell</h3>
+          <p class="text-base text-center">More than 20 years of experience in the fieldarchitecture and has
+            worked on project up to 100+</p>
+        </div>
+      </div>
+    </section>
+    <!--our teams end-->
+  </main>
+
+  <script type="module" src="/main.js"></script>
+</body>
+
 </html>
